fix: replace all index.html links with / for clean home URL

--- a/admin.html
+++ b/admin.html
@@ -619,7 +619,7 @@
       <!-- Sidebar -->
       <aside class="admin-sidebar" id="sidebar">
         <div class="sidebar-brand">
-          <a href="index.html" class="sidebar-logo">
+          <a href="/" class="sidebar-logo">
             <i class="fa-solid fa-heart"></i>
             <span>LBS Admin</span>
           </a>
@@ -691,7 +691,7 @@
             <span>Invite Admin</span>
           </button>
 
-          <a href="index.html" class="nav-item">
+          <a href="/" class="nav-item">
             <i class="fa-solid fa-store"></i>
             <span>View Store</span>
           </a>
