--- a/shop.html
+++ b/shop.html
@@ -62,14 +62,14 @@
     <header class="header" id="siteHeader">
       <div class="header-inner">
         <!-- Logo -->
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
           <span class="logo-text">Lingerie by Sisioyin</span>
         </a>
 
         <!-- Desktop Navigation -->
         <nav class="nav" id="mainNav">
-          <a href="index.html" class="nav-link">Home</a>
+          <a href="/" class="nav-link">Home</a>
           <a href="/shop" class="nav-link active">Shop</a>
           <a href="/shop?gender=Women" class="nav-link">Women</a>
           <a href="/shop?gender=Men" class="nav-link">Men</a>
@@ -124,7 +124,7 @@
       <div class="mobile-drawer-panel">
         <!-- Drawer Header -->
         <div class="drawer-header">
-          <a href="index.html" class="drawer-logo">
+          <a href="/" class="drawer-logo">
             <span class="drawer-logo-icon"
               ><i class="fa-solid fa-heart"></i
             ></span>
@@ -158,7 +158,7 @@
           <nav class="drawer-nav">
             <span class="drawer-nav-title">Menu</span>
             <div class="drawer-nav-list">
-              <a href="index.html" class="drawer-nav-link">
+              <a href="/" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-home"></i
                 ></span>
@@ -276,7 +276,7 @@
       <div class="container">
         <h1 class="page-title">Explore Our Collection</h1>
         <nav class="breadcrumb" aria-label="Breadcrumb">
-          <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
+          <a href="/"><i class="fa-solid fa-house"></i> Home</a>
           <span class="breadcrumb-separator">/</span>
           <span>Shop</span>
         </nav>
@@ -739,7 +739,7 @@
           <!-- Brand -->
           <div class="footer-brand">
             <a
-              href="index.html"
+              href="/"
               class="logo"
               style="margin-bottom: var(--space-4)"
             >
