--- a/track.html
+++ b/track.html
@@ -40,13 +40,13 @@
     <!-- HEADER -->
     <header class="header" id="siteHeader">
       <div class="header-inner">
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
           <span class="logo-text">Lingerie by Sisioyin</span>
         </a>
 
         <nav class="nav" id="mainNav">
-          <a href="index.html" class="nav-link">Home</a>
+          <a href="/" class="nav-link">Home</a>
           <a href="/shop" class="nav-link">Shop</a>
           <a href="/shop?gender=Women" class="nav-link">Women</a>
           <a href="/shop?gender=Men" class="nav-link">Men</a>
@@ -130,7 +130,7 @@
         <div class="footer-grid">
           <div class="footer-brand">
             <a
-              href="index.html"
+              href="/"
               class="logo"
               style="margin-bottom: var(--space-4)"
             >
