--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
     <header class="header" id="siteHeader">
       <div class="header-inner">
         <!-- Logo -->
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
           <span class="logo-text">Lingerie by Sisioyin</span>
         </a>
 
         <!-- Desktop Navigation -->
         <nav class="nav" id="mainNav">
-          <a href="index.html" class="nav-link active">Home</a>
+          <a href="/" class="nav-link active">Home</a>
           <a href="/shop" class="nav-link">Shop</a>
           <a href="/shop?gender=Women" class="nav-link">Women</a>
           <a href="/shop?gender=Men" class="nav-link">Men</a>
@@ -143,7 +143,7 @@
       <div class="mobile-drawer-panel">
         <!-- Drawer Header -->
         <div class="drawer-header">
-          <a href="index.html" class="drawer-logo">
+          <a href="/" class="drawer-logo">
             <span class="drawer-logo-icon"
               ><i class="fa-solid fa-heart"></i
             ></span>
@@ -177,7 +177,7 @@
           <nav class="drawer-nav">
             <span class="drawer-nav-title">Menu</span>
             <div class="drawer-nav-list">
-              <a href="index.html" class="drawer-nav-link active">
+              <a href="/" class="drawer-nav-link active">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-home"></i
                 ></span>
@@ -701,7 +701,7 @@
           <!-- Brand -->
           <div class="footer-brand">
             <a
-              href="index.html"
+              href="/"
               class="logo"
               style="margin-bottom: var(--space-4)"
             >
