--- a/privacy.html
+++ b/privacy.html
@@ -52,12 +52,12 @@
 
     <header class="header" id="siteHeader">
       <div class="header-inner">
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
           <span class="logo-text">Lingerie by Sisioyin</span>
         </a>
         <nav class="nav" id="mainNav">
-          <a href="index.html" class="nav-link">Home</a>
+          <a href="/" class="nav-link">Home</a>
           <a href="/shop" class="nav-link">Shop</a>
           <a href="/shop?gender=Women" class="nav-link">Women</a>
           <a href="/shop?gender=Men" class="nav-link">Men</a>
@@ -109,7 +109,7 @@
       <div class="mobile-drawer-backdrop" id="mobileNavBackdrop"></div>
       <div class="mobile-drawer-panel">
         <div class="drawer-header">
-          <a href="index.html" class="drawer-logo">
+          <a href="/" class="drawer-logo">
             <span class="drawer-logo-icon"
               ><i class="fa-solid fa-heart"></i
             ></span>
@@ -138,7 +138,7 @@
           <nav class="drawer-nav">
             <span class="drawer-nav-title">Menu</span>
             <div class="drawer-nav-list">
-              <a href="index.html" class="drawer-nav-link">
+              <a href="/" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-home"></i
                 ></span>
@@ -485,7 +485,7 @@
         <div class="footer-grid">
           <div class="footer-brand">
             <a
-              href="index.html"
+              href="/"
               class="logo"
               style="margin-bottom: var(--space-4)"
               ><span class="logo-icon"><i class="fa-solid fa-heart"></i></span
