feat: 15-point overhaul — responsive, analytics, reviews, inline cleanup & bug fixes
Major changes:
- #1: Full responsive pass on ALL pages (header, hero, shop, cart, checkout, FAQ, size, wishlist, dashboard, contact, legal, footer)
- #2: Removed 93/94 inline styles and all 6 inline JS handlers from HTML files, replaced with CSS utility classes
- #3: Dashboard auth gate delay reduced (instant localStorage pre-check)
- #4: Bug fixes audit — fixed auth-legal typo across 12 files, removed nul artifact
- #5: Added Quick View modal HTML to wishlist.html (fixing modal not found)
- #6: Visitor location tracking (country + Nigerian state) via ip-api.com, stored in site_visits table, displayed in admin analytics
- #8: Drawer user name/email overflow fix (text-overflow: ellipsis)
- #9: Mobile UI fixes (sort dropdown, cart button, FAQ tabs, size chart, chart tabs, form labels)
- #10: Shop size/color dark mode visibility, qm-price-stock responsive
- #11: Admin reviews + analytics mobile responsive, invite-form dropdown aligned, review purchase verification
- #12: Dashboard topbar responsive, track modal text, logo-text hidden in dashboard, sidebar-logo links to /admin
- #13: Auth modal color fix (added missing CSS variable aliases --clr-accent, --clr-bg, etc.)
- #14: Color palette audit — dark mode overrides for cards, footer, features, sections
- #15: Confirmed admin gets email on new order (Supabase Edge Function)

Database:
- New site_visits table with RLS (anon INSERT, admin SELECT)

--- a/admin.html
+++ b/admin.html
@@ -619,7 +619,7 @@
       <!-- Sidebar -->
       <aside class="admin-sidebar" id="sidebar">
         <div class="sidebar-brand">
-          <a href="/" class="sidebar-logo">
+          <a href="/admin" class="sidebar-logo">
             <i class="fa-solid fa-heart"></i>
             <span>LBS Admin</span>
           </a>
@@ -1825,6 +1825,21 @@
               <i class="fa-solid fa-ranking-star"></i> Top Selling Products
             </h4>
             <div class="analytics-table-wrap" id="topProductsTable">
+              <p class="text-muted text-center">Loading...</p>
+            </div>
+          </div>
+
+          <!-- Visitor Location Analytics -->
+          <div class="analytics-chart-card">
+            <h4><i class="fa-solid fa-globe"></i> Visits by Country</h4>
+            <div class="analytics-table-wrap" id="geoCountryTable">
+              <p class="text-muted text-center">Loading...</p>
+            </div>
+          </div>
+
+          <div class="analytics-chart-card">
+            <h4><i class="fa-solid fa-map-location-dot"></i> Visits by Nigerian State</h4>
+            <div class="analytics-table-wrap" id="geoStateTable">
               <p class="text-muted text-center">Loading...</p>
             </div>
           </div>
