--- a/shop.html
+++ b/shop.html
@@ -705,7 +705,7 @@
             <a href="/shop" class="btn btn-primary">Start Shopping</a>
           </div>
         </div>
-        <div class="cd-footer" id="cartDrawerFooter" style="display: none">
+        <div class="cd-footer u-hidden" id="cartDrawerFooter" >
           <div class="cd-subtotal">
             <span class="cd-subtotal-label">Subtotal</span>
             <span class="cd-subtotal-value" id="cartSubtotal">₦0</span>
@@ -741,10 +741,10 @@
             <a
               href="/"
               class="logo"
-              style="margin-bottom: var(--space-4)"
+             
             >
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text" style="display: inline"
+              <span class="logo-text"
                 >Lingerie by Sisioyin</span
               >
             </a>
@@ -1005,7 +1005,7 @@
         <p class="auth-legal">
           By continuing, you agree to our
           <a href="/terms">Terms</a> and
-          <a href="/privacy">Privacy Policy</a>a
+          <a href="/privacy">Privacy Policy</a>
           >
         </p>
       </div>
@@ -1036,24 +1036,12 @@
         <div
           class="search-results"
           id="searchResults"
-          style="
-            background: var(--bg-surface);
-            border-radius: var(--radius-xl);
-            margin-top: var(--space-4);
-            max-height: 400px;
-            overflow-y: auto;
-          "
+
         >
-          <div
-            style="
-              padding: var(--space-8);
-              text-align: center;
-              color: var(--text-muted);
-            "
-          >
+          <div class="search-placeholder">
             <i
               class="fa-solid fa-magnifying-glass"
-              style="font-size: var(--text-2xl); margin-bottom: var(--space-2)"
+
             ></i>
             <p>Start typing to search products...</p>
           </div>
