--- a/cart.html
+++ b/cart.html
@@ -297,7 +297,7 @@
         <div
           class="checkout-empty-state"
           id="cartPageEmpty"
-          style="display: none"
+          class="u-hidden"
         >
           <div class="empty-icon">
             <i class="fa-solid fa-bag-shopping"></i>
@@ -311,12 +311,12 @@
         </div>
 
         <!-- Cart Wrapper - JS will show if cart has items -->
-        <div class="checkout-wrapper" id="cartWrapper" style="display: none">
+        <div class="checkout-wrapper u-hidden" id="cartWrapper" >
           <!-- Cart Items Section -->
           <div class="checkout-forms">
             <!-- Cart Items Card -->
             <div class="checkout-card active" id="cartItemsCard">
-              <div class="checkout-card-header" style="cursor: default">
+              <div class="checkout-card-header">
                 <div class="card-icon">
                   <i class="fa-solid fa-bag-shopping"></i>
                 </div>
@@ -328,12 +328,12 @@
                   type="button"
                   class="btn btn-ghost btn-sm"
                   id="clearCartBtn"
-                  style="display: none"
+                  class="u-hidden"
                 >
                   <i class="fa-solid fa-trash"></i> Clear All
                 </button>
               </div>
-              <div class="checkout-card-body" style="display: block">
+              <div class="checkout-card-body">
                 <div class="cart-items-list" id="cartItemsList">
                   <!-- Cart items rendered by JS -->
                 </div>
@@ -342,16 +342,9 @@
 
             <!-- Promo Code Card -->
             <div class="checkout-card" id="promoCard">
-              <div class="checkout-card-header" style="cursor: default">
+              <div class="checkout-card-header">
                 <div
-                  class="card-icon"
-                  style="
-                    background: linear-gradient(
-                      135deg,
-                      var(--clr-success),
-                      #059669
-                    );
-                  "
+                  class="card-icon promo-icon-gradient"
                 >
                   <i class="fa-solid fa-tag"></i>
                 </div>
@@ -360,7 +353,7 @@
                   <p>Have a promo code? Enter it here</p>
                 </div>
               </div>
-              <div class="checkout-card-body" style="display: block">
+              <div class="checkout-card-body">
                 <div id="promoFormContainer">
                   <div class="promo-input-group">
                     <input
@@ -382,7 +375,7 @@
                 <div
                   id="promoApplied"
                   class="promo-applied"
-                  style="display: none"
+                  class="u-hidden"
                 >
                   <div class="promo-badge">
                     <i class="fa-solid fa-check-circle"></i>
@@ -422,7 +415,7 @@
                   <span>Subtotal</span>
                   <span id="summarySubtotal">₦0</span>
                 </div>
-                <div class="summary-row" id="discountRow" style="display: none">
+                <div class="summary-row u-hidden" id="discountRow" >
                   <span>Discount</span>
                   <span class="discount" id="summaryDiscount">-₦0</span>
                 </div>
@@ -490,7 +483,7 @@
             <a href="/shop" class="btn btn-primary">Start Shopping</a>
           </div>
         </div>
-        <div class="cd-footer" id="cartDrawerFooter" style="display: none">
+        <div class="cd-footer u-hidden" id="cartDrawerFooter" >
           <div class="cd-subtotal">
             <span class="cd-subtotal-label">Subtotal</span>
             <span class="cd-subtotal-value" id="cartSubtotal">₦0</span>
@@ -520,10 +513,10 @@
             <a
               href="/"
               class="logo"
-              style="margin-bottom: var(--space-4)"
+             
             >
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text" style="display: inline"
+              <span class="logo-text"
                 >Lingerie by Sisioyin</span
               >
             </a>
@@ -782,7 +775,7 @@
         <p class="auth-legal">
           By continuing, you agree to our
           <a href="/terms">Terms</a> and
-          <a href="/privacy">Privacy Policy</a>a
+          <a href="/privacy">Privacy Policy</a>
           >
         </p>
       </div>
@@ -811,24 +804,12 @@
         <div
           class="search-results"
           id="searchResults"
-          style="
-            background: var(--bg-surface);
-            border-radius: var(--radius-xl);
-            margin-top: var(--space-4);
-            max-height: 400px;
-            overflow-y: auto;
-          "
+
         >
-          <div
-            style="
-              padding: var(--space-8);
-              text-align: center;
-              color: var(--text-muted);
-            "
-          >
+          <div class="search-placeholder">
             <i
               class="fa-solid fa-magnifying-glass"
-              style="font-size: var(--text-2xl); margin-bottom: var(--space-2)"
+
             ></i>
             <p>Start typing to search products...</p>
           </div>
