--- a/index.html
+++ b/index.html
@@ -515,10 +515,9 @@
       <section class="testimonials section">
         <div class="container">
           <div
-            class="section-header scroll-fade-up"
-            style="margin-bottom: var(--space-12)"
+            class="section-header scroll-fade-up" 
           >
-            <div style="text-align: center; width: 100%">
+            <div class="section-header-centered">
               <span class="section-label">What Our Customers Say</span>
               <h2 class="section-title">Customer Reviews</h2>
               <p class="section-subtitle">
@@ -537,7 +536,7 @@
           <div
             class="wishlist-empty"
             id="testimonialsEmpty"
-            style="display: none"
+            class="u-hidden"
           >
             <div class="wishlist-empty-icon">
               <i class="fa-solid fa-comments"></i>
@@ -669,7 +668,7 @@
             <a href="/shop" class="btn btn-primary">Start Shopping</a>
           </div>
         </div>
-        <div class="cd-footer" id="cartDrawerFooter" style="display: none">
+        <div class="cd-footer u-hidden" id="cartDrawerFooter" >
           <div class="cd-subtotal">
             <span class="cd-subtotal-label">Subtotal</span>
             <span class="cd-subtotal-value" id="cartSubtotal">₦0</span>
@@ -703,10 +702,10 @@
             <a
               href="/"
               class="logo"
-              style="margin-bottom: var(--space-4)"
+             
             >
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text" style="display: inline"
+              <span class="logo-text"
                 >Lingerie by Sisioyin</span
               >
             </a>
@@ -968,7 +967,7 @@
         <p class="auth-legal">
           By continuing, you agree to our
           <a href="/terms">Terms</a> and
-          <a href="/privacy">Privacy Policy</a>a
+          <a href="/privacy">Privacy Policy</a>
           >
         </p>
       </div>
@@ -999,24 +998,12 @@
         <div
           class="search-results"
           id="searchResults"
-          style="
-            background: var(--bg-surface);
-            border-radius: var(--radius-xl);
-            margin-top: var(--space-4);
-            max-height: 400px;
-            overflow-y: auto;
-          "
+
         >
-          <div
-            style="
-              padding: var(--space-8);
-              text-align: center;
-              color: var(--text-muted);
-            "
-          >
+          <div class="search-placeholder">
             <i
               class="fa-solid fa-magnifying-glass"
-              style="font-size: var(--text-2xl); margin-bottom: var(--space-2)"
+
             ></i>
             <p>Start typing to search products...</p>
           </div>
