--- a/track.html
+++ b/track.html
@@ -132,10 +132,10 @@
             <a
               href="/"
               class="logo"
-              style="margin-bottom: var(--space-4)"
+             
             >
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text" style="display: inline"
+              <span class="logo-text"
                 >Lingerie by Sisioyin</span
               >
             </a>
