--- a/wishlist.html
+++ b/wishlist.html
@@ -255,12 +255,12 @@
         <div
           class="wishlist-actions"
           id="wishlistActions"
-          style="display: none"
+          class="u-hidden"
         >
           <p class="wishlist-count">
             <span id="wishlistItemCount">0</span> items in your wishlist
           </p>
-          <div style="display: flex; gap: var(--space-2)">
+          <div class="wishlist-action-btns">
             <button
               type="button"
               class="btn btn-outline btn-sm"
@@ -330,13 +330,9 @@
       <div class="container">
         <div class="footer-grid">
           <div class="footer-brand">
-            <a
-              href="/"
-              class="logo"
-              style="margin-bottom: var(--space-4)"
-            >
+            <a href="/" class="logo">
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text" style="display: inline"
+              <span class="logo-text"
                 >Lingerie by Sisioyin</span
               >
             </a>
@@ -430,6 +426,72 @@
     </footer>
 
     <!-- ═══════════════════════════════════════════════════════════════════════
+       QUICK VIEW MODAL
+       ═══════════════════════════════════════════════════════════════════════ -->
+    <div class="qv-overlay" id="quickViewOverlay">
+      <div class="qv-modal" id="variantModal" aria-hidden="true">
+        <button
+          type="button"
+          class="qv-close"
+          id="modalCloseBtn"
+          aria-label="Close"
+        >
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+        <div class="qv-content">
+          <div class="qv-gallery">
+            <div class="qv-main-image" id="qvMainWrap">
+              <button type="button" class="qv-nav prev" id="galleryPrev" hidden>
+                <i class="fa-solid fa-chevron-left"></i>
+              </button>
+              <img id="modalImg" src="" alt="Product" />
+              <button type="button" class="qv-nav next" id="galleryNext" hidden>
+                <i class="fa-solid fa-chevron-right"></i>
+              </button>
+              <span class="qv-badge" id="modalBadge" hidden>New</span>
+            </div>
+            <div class="qv-thumbs" id="modalThumbs" hidden></div>
+          </div>
+          <div class="qv-details">
+            <h2 class="qv-title" id="modalTitle">Product Name</h2>
+            <p class="qv-price" id="modalPrice">₦0</p>
+            <p class="qv-desc" id="modalDesc">Product description</p>
+            <div class="qv-section" id="qvColorsSection" hidden>
+              <span class="qv-label">Color</span>
+              <div class="qv-colors" id="modalColors"></div>
+            </div>
+            <div class="qv-section" id="qvSizesSection">
+              <span class="qv-label"
+                >Size <a href="/size" class="qv-guide">Size Guide</a></span
+              >
+              <div class="qv-sizes" id="modalSizes"></div>
+            </div>
+            <div class="qv-section">
+              <span class="qv-label">Quantity</span>
+              <div class="qv-qty">
+                <button type="button" class="qv-qty-btn" id="qtyDecrease">
+                  <i class="fa-solid fa-minus"></i>
+                </button>
+                <span class="qv-qty-value" id="qtyValue">1</span>
+                <button type="button" class="qv-qty-btn" id="qtyIncrease">
+                  <i class="fa-solid fa-plus"></i>
+                </button>
+              </div>
+            </div>
+            <div class="qv-actions">
+              <button type="button" class="qv-add-cart" id="modalAddToCart">
+                <i class="fa-solid fa-bag-shopping"></i> Add to Cart
+              </button>
+              <button type="button" class="qv-wishlist" id="modalWishlist">
+                <i class="fa-regular fa-heart"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ═══════════════════════════════════════════════════════════════════════
        CART DRAWER
        ═══════════════════════════════════════════════════════════════════════ -->
     <div class="cart-drawer-overlay" id="cartDrawerOverlay">
@@ -457,7 +519,7 @@
             <a href="/shop" class="btn btn-primary">Start Shopping</a>
           </div>
         </div>
-        <div class="cd-footer" id="cartDrawerFooter" style="display: none">
+        <div class="cd-footer u-hidden" id="cartDrawerFooter" >
           <div class="cd-subtotal">
             <span class="cd-subtotal-label">Subtotal</span>
             <span class="cd-subtotal-value" id="cartSubtotal">₦0</span>
@@ -502,24 +564,12 @@
         <div
           class="search-results"
           id="searchResults"
-          style="
-            background: var(--bg-surface);
-            border-radius: var(--radius-xl);
-            margin-top: var(--space-4);
-            max-height: 400px;
-            overflow-y: auto;
-          "
+
         >
-          <div
-            style="
-              padding: var(--space-8);
-              text-align: center;
-              color: var(--text-muted);
-            "
-          >
+          <div class="search-placeholder">
             <i
               class="fa-solid fa-magnifying-glass"
-              style="font-size: var(--text-2xl); margin-bottom: var(--space-2)"
+
             ></i>
             <p>Start typing to search products...</p>
           </div>
@@ -532,7 +582,12 @@
        ═══════════════════════════════════════════════════════════════════════ -->
     <div class="modal-backdrop" id="authBackdrop"></div>
     <div class="modal auth-modal" id="authModal">
-      <button type="button" class="auth-modal-close" id="authClose" aria-label="Close">
+      <button
+        type="button"
+        class="auth-modal-close"
+        id="authClose"
+        aria-label="Close"
+      >
         <i class="fa-solid fa-xmark"></i>
       </button>
 
@@ -540,7 +595,9 @@
       <div class="auth-hero">
         <div class="auth-hero-icon"><i class="fa-solid fa-heart"></i></div>
         <h2 class="auth-hero-title" id="authHeroTitle">Welcome Back</h2>
-        <p class="auth-hero-sub" id="authHeroSub">Sign in to your account to continue</p>
+        <p class="auth-hero-sub" id="authHeroSub">
+          Sign in to your account to continue
+        </p>
       </div>
 
       <div class="modal-body">
@@ -586,7 +643,11 @@
             </div>
           </div>
           <div class="form-group recaptcha-field">
-            <div class="g-recaptcha" id="loginRecaptcha" data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"></div>
+            <div
+              class="g-recaptcha"
+              id="loginRecaptcha"
+              data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"
+            ></div>
           </div>
           <button type="submit" class="auth-submit-btn btn-disabled" disabled>
             <span>Sign In</span>
@@ -595,10 +656,22 @@
           <div class="auth-divider">or continue with</div>
           <button type="button" class="auth-google-btn google-login-btn">
             <svg viewBox="0 0 24 24" width="18" height="18">
-              <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"/>
-              <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
-              <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
-              <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
+              <path
+                fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"
+              />
+              <path
+                fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+              />
+              <path
+                fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+              />
+              <path
+                fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+              />
             </svg>
             Continue with Google
           </button>
@@ -665,7 +738,11 @@
             </div>
           </div>
           <div class="form-group recaptcha-field">
-            <div class="g-recaptcha" id="signupRecaptcha" data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"></div>
+            <div
+              class="g-recaptcha"
+              id="signupRecaptcha"
+              data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"
+            ></div>
           </div>
           <button type="submit" class="auth-submit-btn btn-disabled" disabled>
             <span>Create Account</span>
@@ -674,10 +751,22 @@
           <div class="auth-divider">or continue with</div>
           <button type="button" class="auth-google-btn google-login-btn">
             <svg viewBox="0 0 24 24" width="18" height="18">
-              <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"/>
-              <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
-              <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
-              <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
+              <path
+                fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"
+              />
+              <path
+                fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+              />
+              <path
+                fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+              />
+              <path
+                fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+              />
             </svg>
             Continue with Google
           </button>
@@ -686,7 +775,7 @@
         <p class="auth-legal">
           By continuing, you agree to our
           <a href="/terms">Terms</a> and
-          <a href="/privacy">Privacy Policy</a>a
+          <a href="/privacy">Privacy Policy</a>
           >
         </p>
       </div>
