feat: 19-point update — mobile UX, admin redesign, reviews, export, tracking & live mode
- #1  Logo text bigger/bolder on mobile (text-lg, 700 weight)
- #2  Delivered status shows green (done class) in all timelines
- #2  Admin order view button improved (btn-outline + View text)
- #3  DOB dropdown arrow spacing fixed (right 16px, size 12px)
- #4  Google Places autocomplete in dashboard address form
- #5  Wishlist mobile responsive (2-col/1-col), share button, counter fix
- #6  FAQ All tab centered with flexbox
- #7  Track-by-email removed for security
- #8  Review button only in delivered orders (dashboard + shop gated)
- #9  Size/color dark mode CSS fix + stock/delivery alignment
- #10 Admin auth flash fix (localStorage pre-check)
- #11 Auth password box fixed height (48px) + modal smaller on mobile
- #12 Admin description form spacing fix on mobile
- #13 Admin analytics redesign (enhanced cards, charts, responsive)
- #13 Removed How to Set Up Tracking guide from analytics
- #14 Admin reviews redesign (gradient stats, hover cards, responsive)
- #15 Export dropdown with 5 data types (products, orders, customers, reviews, activity)
- #16 Workspace verified clean (all sensitive docs gitignored)
- #17 Test mode disabled (isTestMode: false), social links corrected
- HTML formatting cleanup across cart, contact, index, track pages

--- a/admin.html
+++ b/admin.html
@@ -746,15 +746,58 @@
           </div>
 
           <div class="topbar-right">
-            <button
-              class="topbar-btn"
-              id="exportBtn"
-              type="button"
-              title="Export Data"
-            >
-              <i class="fa-solid fa-file-export"></i>
-              <span>Export</span>
-            </button>
+            <div class="export-dropdown" id="exportDropdown">
+              <button
+                class="topbar-btn"
+                id="exportBtn"
+                type="button"
+                title="Export Data"
+              >
+                <i class="fa-solid fa-file-export"></i>
+                <span>Export</span>
+                <i
+                  class="fa-solid fa-chevron-down"
+                  style="font-size: 10px; margin-left: 4px"
+                ></i>
+              </button>
+              <div class="export-menu" id="exportMenu" hidden>
+                <button
+                  type="button"
+                  class="export-option"
+                  data-export="products"
+                >
+                  <i class="fa-solid fa-boxes-stacked"></i> Products
+                </button>
+                <button
+                  type="button"
+                  class="export-option"
+                  data-export="orders"
+                >
+                  <i class="fa-solid fa-receipt"></i> Orders
+                </button>
+                <button
+                  type="button"
+                  class="export-option"
+                  data-export="customers"
+                >
+                  <i class="fa-solid fa-users"></i> Customers
+                </button>
+                <button
+                  type="button"
+                  class="export-option"
+                  data-export="reviews"
+                >
+                  <i class="fa-solid fa-star"></i> Reviews
+                </button>
+                <button
+                  type="button"
+                  class="export-option"
+                  data-export="activity"
+                >
+                  <i class="fa-solid fa-clock-rotate-left"></i> Activity Logs
+                </button>
+              </div>
+            </div>
 
             <div class="stat-pill">
               <span class="label">Products:</span>
@@ -1838,42 +1881,12 @@
           </div>
 
           <div class="analytics-chart-card">
-            <h4><i class="fa-solid fa-map-location-dot"></i> Visits by Nigerian State</h4>
+            <h4>
+              <i class="fa-solid fa-map-location-dot"></i> Visits by Nigerian
+              State
+            </h4>
             <div class="analytics-table-wrap" id="geoStateTable">
               <p class="text-muted text-center">Loading...</p>
-            </div>
-          </div>
-
-          <!-- Tracking Codes Setup Guide -->
-          <div class="analytics-chart-card" id="analyticsGuide">
-            <h4>
-              <i class="fa-solid fa-circle-info"></i> How to Set Up Tracking
-            </h4>
-            <div class="analytics-guide-content">
-              <div class="analytics-guide-step">
-                <strong>Google Analytics:</strong> Go to
-                <code>assets/js/config.js</code> and set your
-                <code>GA_MEASUREMENT_ID</code> (e.g. <code>G-XXXXXXXXXX</code>).
-                Get it from
-                <a
-                  href="https://analytics.google.com"
-                  target="_blank"
-                  rel="noopener"
-                  >analytics.google.com</a
-                >.
-              </div>
-              <div class="analytics-guide-step">
-                <strong>Facebook Pixel:</strong> Go to
-                <code>assets/js/config.js</code> and set your
-                <code>FB_PIXEL_ID</code> (e.g. <code>123456789012345</code>).
-                Get it from
-                <a
-                  href="https://business.facebook.com/events_manager"
-                  target="_blank"
-                  rel="noopener"
-                  >Facebook Events Manager</a
-                >.
-              </div>
             </div>
           </div>
         </section>
