--- a/track.html
+++ b/track.html
@@ -97,9 +97,7 @@
       <div class="track-page">
         <div class="track-page-header">
           <h1>Track Your Order</h1>
-          <p>
-            Enter your order number or email address to view your order status
-          </p>
+          <p>Enter your order number to view your order status</p>
         </div>
 
         <div class="track-search-card">
@@ -109,7 +107,7 @@
               <input
                 type="text"
                 id="trackInput"
-                placeholder="Order number (e.g. LBS-20260207-0001) or email"
+                placeholder="Order number (e.g. LBS-20260207-0001)"
                 required
                 autocomplete="off"
               />
@@ -129,15 +127,9 @@
       <div class="container">
         <div class="footer-grid">
           <div class="footer-brand">
-            <a
-              href="/"
-              class="logo"
-             
-            >
+            <a href="/" class="logo">
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text"
-                >Lingerie by Sisioyin</span
-              >
+              <span class="logo-text">Lingerie by Sisioyin</span>
             </a>
             <p>
               Luxe essentials defined by comfort and confidence. Premium
