--- a/contact.html
+++ b/contact.html
@@ -353,7 +353,7 @@
             </form>
 
             <!-- Success Message (hidden by default) -->
-            <div class="form-success u-hidden" id="formSuccess" >
+            <div class="form-success u-hidden" id="formSuccess">
               <div class="form-success-icon">
                 <i class="fa-solid fa-check"></i>
               </div>
@@ -482,15 +482,9 @@
       <div class="container">
         <div class="footer-grid">
           <div class="footer-brand">
-            <a
-              href="/"
-              class="logo"
-             
-            >
+            <a href="/" class="logo">
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text"
-                >Lingerie by Sisioyin</span
-              >
+              <span class="logo-text">Lingerie by Sisioyin</span>
             </a>
             <p>
               Luxe essentials defined by comfort and confidence. Premium
@@ -613,7 +607,7 @@
             <a href="/shop" class="btn btn-primary">Start Shopping</a>
           </div>
         </div>
-        <div class="cd-footer u-hidden" id="cartDrawerFooter" >
+        <div class="cd-footer u-hidden" id="cartDrawerFooter">
           <div class="cd-subtotal">
             <span class="cd-subtotal-label">Subtotal</span>
             <span class="cd-subtotal-value" id="cartSubtotal">₦0</span>
@@ -655,16 +649,9 @@
             <i class="fa-solid fa-xmark"></i>
           </button>
         </div>
-        <div
-          class="search-results"
-          id="searchResults"
-
-        >
+        <div class="search-results" id="searchResults">
           <div class="search-placeholder">
-            <i
-              class="fa-solid fa-magnifying-glass"
-
-            ></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
             <p>Start typing to search products...</p>
           </div>
         </div>
@@ -676,7 +663,12 @@
        ═══════════════════════════════════════════════════════════════════════ -->
     <div class="modal-backdrop" id="authBackdrop"></div>
     <div class="modal auth-modal" id="authModal">
-      <button type="button" class="auth-modal-close" id="authClose" aria-label="Close">
+      <button
+        type="button"
+        class="auth-modal-close"
+        id="authClose"
+        aria-label="Close"
+      >
         <i class="fa-solid fa-xmark"></i>
       </button>
 
@@ -684,7 +676,9 @@
       <div class="auth-hero">
         <div class="auth-hero-icon"><i class="fa-solid fa-heart"></i></div>
         <h2 class="auth-hero-title" id="authHeroTitle">Welcome Back</h2>
-        <p class="auth-hero-sub" id="authHeroSub">Sign in to your account to continue</p>
+        <p class="auth-hero-sub" id="authHeroSub">
+          Sign in to your account to continue
+        </p>
       </div>
 
       <div class="modal-body">
@@ -730,7 +724,11 @@
             </div>
           </div>
           <div class="form-group recaptcha-field">
-            <div class="g-recaptcha" id="loginRecaptcha" data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"></div>
+            <div
+              class="g-recaptcha"
+              id="loginRecaptcha"
+              data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"
+            ></div>
           </div>
           <button type="submit" class="auth-submit-btn btn-disabled" disabled>
             <span>Sign In</span>
@@ -739,10 +737,22 @@
           <div class="auth-divider">or continue with</div>
           <button type="button" class="auth-google-btn google-login-btn">
             <svg viewBox="0 0 24 24" width="18" height="18">
-              <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"/>
-              <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
-              <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
-              <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
+              <path
+                fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"
+              />
+              <path
+                fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+              />
+              <path
+                fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+              />
+              <path
+                fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+              />
             </svg>
             Continue with Google
           </button>
@@ -809,7 +819,11 @@
             </div>
           </div>
           <div class="form-group recaptcha-field">
-            <div class="g-recaptcha" id="signupRecaptcha" data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"></div>
+            <div
+              class="g-recaptcha"
+              id="signupRecaptcha"
+              data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"
+            ></div>
           </div>
           <button type="submit" class="auth-submit-btn btn-disabled" disabled>
             <span>Create Account</span>
@@ -818,10 +832,22 @@
           <div class="auth-divider">or continue with</div>
           <button type="button" class="auth-google-btn google-login-btn">
             <svg viewBox="0 0 24 24" width="18" height="18">
-              <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"/>
-              <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
-              <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
-              <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
+              <path
+                fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92a5.06 5.06 0 0 1-2.2 3.32v2.76h3.56c2.08-1.92 3.28-4.74 3.28-8.09z"
+              />
+              <path
+                fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.56-2.76c-.98.66-2.24 1.05-3.72 1.05-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+              />
+              <path
+                fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+              />
+              <path
+                fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+              />
             </svg>
             Continue with Google
           </button>
