--- a/index.html
+++ b/index.html
@@ -10,15 +10,30 @@
     />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#be185d" />
+    <meta name="author" content="Lingerie by Sisioyin" />
+    <meta
+      name="keywords"
+      content="lingerie, loungewear, underwear, bra, panties, nightwear, Nigeria, Lagos, premium lingerie, comfortable underwear, women lingerie"
+    />
+    <link rel="canonical" href="https://lingeriebysisioyin.store/" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Lingerie by Sisioyin" />
+    <meta
+      property="og:title"
+      content="Lingerie by Sisioyin | Premium Lingerie & Loungewear"
+    />
     <meta
       property="og:description"
       content="Luxe essentials defined by comfort and confidence. Premium lingerie and loungewear."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/img/og-image.png" />
+    <meta property="og:url" content="https://lingeriebysisioyin.store/" />
+    <meta
+      property="og:image"
+      content="https://lingeriebysisioyin.store/assets/img/og-image.png"
+    />
+    <meta property="og:site_name" content="Lingerie by Sisioyin" />
+    <meta property="og:locale" content="en_NG" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -53,21 +68,34 @@
 
     <!-- Structured Data -->
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Lingerie by Sisioyin",
-        "url": "https://lingeriebysisioyin.store",
-        "logo": "https://lingeriebysisioyin.store/assets/img/logo.png",
-        "description": "Premium lingerie and loungewear curated for comfort and confidence.",
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+234-903-334-4860",
-          "contactType": "customer service",
-          "availableLanguage": "English"
+      [
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Lingerie by Sisioyin",
+          "url": "https://lingeriebysisioyin.store",
+          "logo": "https://lingeriebysisioyin.store/assets/img/logo.png",
+          "description": "Premium lingerie and loungewear curated for comfort and confidence.",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+234-903-334-4860",
+            "contactType": "customer service",
+            "availableLanguage": "English"
+          },
+          "sameAs": ["https://instagram.com/lingeriebysissioyin"]
         },
-        "sameAs": ["https://instagram.com/lingeriebysissioyin"]
-      }
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "Lingerie by Sisioyin",
+          "url": "https://lingeriebysisioyin.store",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://lingeriebysisioyin.store/shop?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        }
+      ]
     </script>
   </head>
 
@@ -852,6 +880,11 @@
               />
             </div>
           </div>
+          <div class="auth-forgot">
+            <a href="#" id="forgotPasswordLink" class="auth-forgot-link"
+              >Forgot password?</a
+            >
+          </div>
           <div class="form-group recaptcha-field">
             <div
               class="g-recaptcha"
@@ -986,7 +1019,6 @@
           By continuing, you agree to our
           <a href="/terms">Terms</a> and
           <a href="/privacy">Privacy Policy</a>
-          >
         </p>
       </div>
     </div>
