--- a/size.html
+++ b/size.html
@@ -21,7 +21,7 @@
     <meta property="og:image" content="assets/img/og-image.png" />
     <meta
       property="og:url"
-      content="https://lingeriebysisioyin.store/size.html"
+      content="https://lingeriebysisioyin.store/size"
     />
 
     <!-- Favicon -->
