--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <meta property="og:image" content="assets/img/og-image.png" />
     <meta
       property="og:url"
-      content="https://lingeriebysisioyin.store/contact.html"
+      content="https://lingeriebysisioyin.store/contact"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
