--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
     <meta property="og:image" content="assets/img/og-image.png" />
     <meta
       property="og:url"
-      content="https://lingeriebysisioyin.store/faq.html"
+      content="https://lingeriebysisioyin.store/faq"
     />
 
     <!-- Favicon -->
