--- a/privacy.html
+++ b/privacy.html
@@ -21,7 +21,7 @@
     <meta property="og:image" content="assets/img/og-image.png" />
     <meta
       property="og:url"
-      content="https://lingeriebysisioyin.store/privacy.html"
+      content="https://lingeriebysisioyin.store/privacy"
     />
 
     <!-- Favicon -->
