--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
     <meta property="og:image" content="assets/img/og-image.png" />
     <meta
       property="og:url"
-      content="https://lingeriebysisioyin.store/terms.html"
+      content="https://lingeriebysisioyin.store/terms"
     />
 
     <!-- Favicon -->
